src/objects/gdf_Statement__c.object
<CustomObject>
    <fields>
        <fullName>gdf_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>gdf_Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gdf_End_Date_Index__c</fullName>
        <label>End Date Index</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_KWH_Consumption__c</fullName>
        <label>KWH Consumption</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Sector_Activity__c</fullName>
        <label>Sector Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Electricity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Start_Date_Index__c</fullName>
        <label>Start Date Index</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_Statement_Activity__c</fullName>
        <label>Statement Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated Electricity Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated Gas Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-identified by the client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement by the distributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Unit__c</fullName>
        <defaultValue>&quot;KWH&quot;</defaultValue>
        <label>Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Statement No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>